--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node ./bin/www",
     "dev": "nodemon ./index.js",
     "ui": "browser-sync start --config bs-config.js"
   },
