--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node index.js", 
     "dev": "nodemon ./index.js",
     "ui": "browser-sync start --config bs-config.js"
   },
